[gd_scene load_steps=4 format=4 uid="uid://dypvtpctvas43"]

[ext_resource type="TileSet" uid="uid://bu4gn6thqnrqb" path="res://scenes/test_tileset.tres" id="1_6ijtv"]
[ext_resource type="Script" uid="uid://c5436ldwguqbw" path="res://scripts/reactor_sector.gd" id="1_pkqih"]
[ext_resource type="PackedScene" uid="uid://b6mrdx2sklm1e" path="res://scenes/reactor_dash_platform.tscn" id="3_u3ho6"]

[node name="ReactorSector" type="Node2D"]
script = ExtResource("1_pkqih")

[node name="Tilemaps" type="Node2D" parent="."]

[node name="MainPlatforms" type="TileMapLayer" parent="Tilemaps"]
tile_map_data = PackedByteArray("AAAAAAEAAQAEAAIAAAAAAAIAAQAEAAIAAAAAAAMAAQAEAAIAAAAAAAQAAQAEAAIAAAAAAAUAAQAEAAIAAAAAAAYAAQAEAAIAAAAAAAcAAQAEAAIAAAAAAAgAAQAEAAIAAAAAAAkAAQAEAAIAAAAAAAoAAQAEAAIAAAAAAA8AAQAEAAIAAAABAA8AAQAEAAIAAAACAA8AAQAEAAIAAAADAA8AAQAEAAIAAAAEAA8AAQAEAAIAAAAFAA8AAQAEAAIAAAAGAA8AAQAEAAIAAAAHAA8AAQAEAAIAAAAIAA8AAQAEAAIAAAAJAA8AAQAEAAIAAAAKAA8AAQAEAAIAAAALAA8AAQAEAAIAAAAMAA8AAQAEAAIAAAANAA8AAQAEAAIAAAAOAA8AAQAEAAIAAAAPAA8AAQAEAAIAAAAQAA8AAQAEAAIAAAARAA8AAQAEAAIAAAASAA8AAQAEAAIAAAATAA8AAQAEAAIAAAAUAA8AAQAEAAIAAAAVAA8AAQAEAAIAAAAWAA8AAQAEAAIAAAAXAA8AAQAEAAIAAAAYAA8AAQAEAAIAAAAZAA8AAQAEAAIAAAAaAA8AAQAEAAIAAAAbAA8AAQAEAAIAAAAcAAMAAQAEAAIAAAAcAAQAAQAEAAIAAAAcAAUAAQAEAAIAAAAcAAYAAQAEAAIAAAAcAAcAAQAEAAIAAAAcAAgAAQAEAAIAAAAcAAkAAQAEAAIAAAAcAAoAAQAEAAIAAAAcAA8AAQAEAAIAAAAAAAsAAQAEAAIAAAAAABAAAQAEAAIAAAABABAAAQAEAAIAAAACABAAAQAEAAIAAAADABAAAQAEAAIAAAAEABAAAQAEAAIAAAAFABAAAQAEAAIAAAAGABAAAQAEAAIAAAAHABAAAQAEAAIAAAAIABAAAQAEAAIAAAAJABAAAQAEAAIAAAAKABAAAQAEAAIAAAALABAAAQAEAAIAAAAMABAAAQAEAAIAAAANABAAAQAEAAIAAAAOABAAAQAEAAIAAAAPABAAAQAEAAIAAAAQABAAAQAEAAIAAAARABAAAQAEAAIAAAASABAAAQAEAAIAAAATABAAAQAEAAIAAAAUABAAAQAEAAIAAAAVABAAAQAEAAIAAAAWABAAAQAEAAIAAAAXABAAAQAEAAIAAAAYABAAAQAEAAIAAAAZABAAAQAEAAIAAAAaABAAAQAEAAIAAAAbABAAAQAEAAIAAAAcAAsAAQAEAAIAAAAcABAAAQAEAAIAAAAAAAAAAQAEAAIAAAAcAAAAAQAEAAIAAAABAAAAAQAEAAIAAAACAAAAAQAEAAIAAAADAAAAAQAEAAIAAAAEAAAAAQAEAAIAAAAFAAAAAQAEAAIAAAAGAAAAAQAEAAIAAAAHAAAAAQAEAAIAAAAIAAAAAQAEAAIAAAAJAAAAAQAEAAIAAAAKAAAAAQAEAAIAAAALAAAAAQAEAAIAAAAMAAAAAQAEAAIAAAANAAAAAQAEAAIAAAAOAAAAAQAEAAIAAAAPAAAAAQAEAAIAAAAQAAAAAQAEAAIAAAARAAAAAQAEAAIAAAASAAAAAQAEAAIAAAATAAAAAQAEAAIAAAAUAAAAAQAEAAIAAAAVAAAAAQAEAAIAAAAWAAAAAQAEAAIAAAAXAAAAAQAEAAIAAAAYAAAAAQAEAAIAAAAZAAAAAQAEAAIAAAAaAAAAAQAEAAIAAAAbAAAAAQAEAAIAAAAcAAIAAQAEAAIAAAAcAAEAAQAEAAIAAADj/wAAAQAEAAIAAADj/wEAAQAEAAIAAADj/wIAAQAEAAIAAADj/wMAAQAEAAIAAADj/wQAAQAEAAIAAADj/wUAAQAEAAIAAADj/woAAQAEAAIAAADj/wsAAQAEAAIAAADj/w8AAQAEAAIAAADj/xAAAQAEAAIAAADk/wAAAQAEAAIAAADk/xAAAQAEAAIAAADl/wAAAQAEAAIAAADl/xAAAQAEAAIAAADm/wAAAQAEAAIAAADm/xAAAQAEAAIAAADn/wAAAQAEAAIAAADn/xAAAQAEAAIAAADo/wAAAQAEAAIAAADo/xAAAQAEAAIAAADp/wAAAQAEAAIAAADp/xAAAQAEAAIAAADq/wAAAQAEAAIAAADq/xAAAQAEAAIAAADr/wAAAQAEAAIAAADr/xAAAQAEAAIAAADs/wAAAQAEAAIAAADs/xAAAQAEAAIAAADt/wAAAQAEAAIAAADt/xAAAQAEAAIAAADu/wAAAQAEAAIAAADu/xAAAQAEAAIAAADv/wAAAQAEAAIAAADv/xAAAQAEAAIAAADw/wAAAQAEAAIAAADw/xAAAQAEAAIAAADx/wAAAQAEAAIAAADx/xAAAQAEAAIAAADy/wAAAQAEAAIAAADy/xAAAQAEAAIAAADz/wAAAQAEAAIAAADz/xAAAQAEAAIAAAD0/wAAAQAEAAIAAAD0/xAAAQAEAAIAAAD1/wAAAQAEAAIAAAD1/xAAAQAEAAIAAAD2/wAAAQAEAAIAAAD2/xAAAQAEAAIAAAD3/wAAAQAEAAIAAAD3/xAAAQAEAAIAAAD4/wAAAQAEAAIAAAD4/xAAAQAEAAIAAAD5/wAAAQAEAAIAAAD5/xAAAQAEAAIAAAD6/wAAAQAEAAIAAAD6/xAAAQAEAAIAAAD7/wAAAQAEAAIAAAD7/xAAAQAEAAIAAAD8/wAAAQAEAAIAAAD8/xAAAQAEAAIAAAD9/wAAAQAEAAIAAAD9/xAAAQAEAAIAAAD+/wAAAQAEAAIAAAD+/xAAAQAEAAIAAAD//wAAAQAEAAIAAAD//wEAAQAEAAIAAAD//wIAAQAEAAIAAAD//wMAAQAEAAIAAAD//wQAAQAEAAIAAAD//wUAAQAEAAIAAAD//wkAAQAEAAIAAAD//woAAQAEAAIAAAD//wsAAQAEAAIAAAD//w8AAQAEAAIAAAD//xAAAQAEAAIAAAD5/w8AAQAEAAIAAAD6/w8AAQAEAAIAAAD7/w8AAQAEAAIAAAD8/w8AAQAEAAIAAAD9/w8AAQAEAAIAAAD+/w8AAQAEAAIAAAD6/wsAAQAEAAIAAAD6/woAAQAEAAIAAAD6/wkAAQAEAAIAAADj/wwAAQAEAAIAAADj/w0AAQAEAAIAAADj/w4AAQAEAAIAAAD//wYAAQAEAAIAAAD//wcAAQAEAAIAAAD//wgAAQAEAAIAAADj/wkAAQAEAAIAAAAcAAwAAQAEAAIAAAAcAA0AAQAEAAIAAAAcAA4AAQAEAAIAAAA=")
tile_set = ExtResource("1_6ijtv")

[node name="DeathTiles" type="TileMapLayer" parent="Tilemaps"]
modulate = Color(0, 0, 0, 1)
tile_map_data = PackedByteArray("AADk/w8AAQAEAAIAAADl/w8AAQAEAAIAAADm/w8AAQAEAAIAAADn/w8AAQAEAAIAAADo/w8AAQAEAAIAAADp/w8AAQAEAAIAAADq/w8AAQAEAAIAAADr/w8AAQAEAAIAAADs/w8AAQAEAAIAAADt/w8AAQAEAAIAAADu/w8AAQAEAAIAAADv/w8AAQAEAAIAAADw/w8AAQAEAAIAAADx/w8AAQAEAAIAAADy/w8AAQAEAAIAAADz/w8AAQAEAAIAAAD0/w8AAQAEAAIAAAD1/w8AAQAEAAIAAAD2/w8AAQAEAAIAAAD3/w8AAQAEAAIAAAD4/w8AAQAEAAIAAAA=")
tile_set = ExtResource("1_6ijtv")

[node name="DashPlatforms" type="Node2D" parent="."]

[node name="Tutorial1" type="Node2D" parent="DashPlatforms"]

[node name="DashPlatform" parent="DashPlatforms/Tutorial1" instance=ExtResource("3_u3ho6")]
position = Vector2(-500, 180)
platform_data = {
"size": Vector2i(3, 1),
"velocity_direction": Vector2i(1, 0),
"velocity_magnitude": Vector2i(7, 0)
}

[node name="Tutorial2" type="Node2D" parent="DashPlatforms"]

[node name="Puzzle1" type="Node2D" parent="DashPlatforms"]

[node name="Puzzle2" type="Node2D" parent="DashPlatforms"]

[node name="Officer" type="Node2D" parent="DashPlatforms"]

[node name="ReturnTimer" type="Timer" parent="."]
one_shot = true

[connection signal="timeout" from="ReturnTimer" to="." method="_on_return_timer_timeout"]
